src/test/ui/no_share-struct.stderr
error[E0277]: `Foo` cannot be shared between threads safely
  --> $DIR/no_share-struct.rs:12:9
   |
LL |     bar(x);
   |     --- ^ `Foo` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Sync` is not implemented for `Foo`
note: required by a bound in `bar`
  --> $DIR/no_share-struct.rs:8:11
   |
LL | fn bar<T: Sync>(_: T) {}
   |           ^^^^ required by this bound in `bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
